добавляет компонент дизайн

--- a/assets/home.html
+++ b/assets/home.html
@@ -19,6 +19,7 @@
         <Banners></Banners>
         <Series></Series>
         <Design></Design>
+        <Quote></Quote>
       </main>
       <Footer></Footer>
     </div>
