добавляет новые блоки

--- a/assets/home.html
+++ b/assets/home.html
@@ -20,6 +20,9 @@
         <Series></Series>
         <Design></Design>
         <Quote></Quote>
+        <Production></Production>
+        <Exclusive></Exclusive>
+        <Request></Request>
       </main>
       <Footer></Footer>
     </div>
