добавляет новые компоненты

--- a/assets/home.html
+++ b/assets/home.html
@@ -23,6 +23,10 @@
         <Production></Production>
         <Exclusive></Exclusive>
         <Request></Request>
+        <Partner></Partner>
+        <Manufacturing></Manufacturing>
+        <Faq></Faq>
+        <More></More>
       </main>
       <Footer></Footer>
     </div>
