--- a/assets/home.html
+++ b/assets/home.html
@@ -28,7 +28,7 @@
         <Faq></Faq>
         <More></More>
       </main>
-      <Footer></Footer>
+      <Footer-Main></Footer-Main>
     </div>
 
   </div>
