добавляет адаптив и сжимает картинки

--- a/assets/home.html
+++ b/assets/home.html
@@ -18,6 +18,7 @@
       <main>
         <Banners></Banners>
         <Series></Series>
+        <Video-Section></Video-Section>
         <Design></Design>
         <Quote></Quote>
         <Production></Production>
