--- a/#src/index.html
+++ b/#src/index.html
@@ -80,7 +80,7 @@
 						<h2>Сопутствующие услуги</h2>
 						<div class="additional__items">
 							<div class="additional__wrapper">
-								<div class="_swiper additional__swiper">
+								<div class="swiper additional__swiper">
 									<div class="additional__item swiper-slide">
 										<div class="additional__img">
 											<img src="img/warm-opening-glazing.jpg" alt="Холодное раздвижное остекление">
@@ -243,7 +243,7 @@
 						<h2>Сопутствующие услуги</h2>
 						<div class="additional__items">
 							<div class="additional__wrapper">
-								<div class="_swiper additional__swiper1">
+								<div class="swiper additional__swiper1">
 									<div class="additional__item swiper-slide">
 										<div class="additional__img">
 											<img src="img/warm-opening-glazing.jpg" alt="Холодное раздвижное остекление">
@@ -343,7 +343,7 @@
 						<h2>Сопутствующие услуги</h2>
 						<div class="additional__items">
 							<div class="additional__wrapper">
-								<div class="_swiper additional__swiper2">
+								<div class="swiper additional__swiper2">
 									<div class="additional__item swiper-slide">
 										<div class="additional__img">
 											<img src="img/warm-opening-glazing.jpg" alt="Холодное раздвижное остекление">
